# knowledge_base

./: README.md
.obsidian/: config  workspace
AWS/: boto3_s3.py
General/: Data Structure.md  Release Management.md
Python/: OOP.py  OOP_Student_Class_Example.py  OOP_class_attribute_and_instance_attribute.py  OOP_inheritance.py  OPP_class_attribute_and_method.py  OPP_static_method.py  annotation.py  decorator.py  exception.py  function.py  helpers.py  logging_example.py  module_example_main.py  namespace.py  read_package.py  variable_type.py
Python/packaging_tutorial/: reference.txt  setup.cfg
Python/packaging_tutorial/src/example_pkg_clement.egg-info/: PKG-INFO  SOURCES.txt
