[metadata]
name = example-pkg-clement
version = 0.0.1
author = Clement Chan
author_email = cms.clementchan@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/cmsclementchan/knowledge_base/tree/main/Python/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/cmsclementchan/knowledge_base/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src